@@ -1,6 +1,7 @@
 0.44 - updated postgresql drop-in lib for postgresql 8/9 compatibility
 	updated mysql drop-in lib for mysql 5.2+ compatibility
 	applied Renat's patch to fix the client session count in the stats
+	added framework for getDbs/Tables/Columns and selectDatabase
 
 0.43 - updated ruby code build to take sitearch into account during includes
 	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
